--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
   <body>
     <nav>
       <li>Home</li>
-      <li><a href="">HTML</a></li>
+      <li><a href="/HTMLInfo.html">HTML</a></li>
       <li><a href="">CSS</a></li>
       <li><a href="">JS</a></li>
       <li><a href="">Framework and OSHA</a></li>
     </nav>
     <div class="heroSection">
-      <div class="HeroSectionText">
         <h1>A quick and easy way to study web dev.</h1>
         <p>
           This website was made to not only be introduced to web development but
           know what is likely going to be on locals and districts for SkillsUSA. For now this website doesn't have anything but i'll uppdate and improve the website daily.   
         </p>
-        <img src="/Images/spike_smoke1.avif" width="500"/>
-      </div>
     </div>
   </body>
 </html>
