Created heading section in HTML info page

--- a/HTMLInfo.html
+++ b/HTMLInfo.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
     <title>HTML Info</title>
-</head>
-<body>
-    <h1>H1 header tag (most used)</h1>
-    <h2>H2 header tag</h2>
-    <h3>H3 header tag</h3>
-    <h4>H4 header tag</h4>
-    <h5>H5 header tag</h5>
-    <h6>H6 header tag</h6>
-</body>
+  </head>
+  <body>
+    <nav>
+      <li>Home</li>
+      <li><a href="/HTMLInfo.html">HTML</a></li>
+      <li><a href="">CSS</a></li>
+      <li><a href="">JS</a></li>
+      <li><a href="">Framework and OSHA</a></li>
+    </nav>
+    <section>
+        
+        <h1 style="font-size: 84px">Headings</h1>
+        <p>
+          Heading tags are often used as the title of the pages (not to be
+          misunderstood as the <code>title</code> tag, which is for adding a name
+          to a webpage tab) and are meant to give the user and introduction to
+          what they might see below the Heading.
+        </p>
+        <p>
+          It's best practice to put Headings i n a size hierarchy, where the bigger
+          Headings go above the smaller Headings, making it better for the user
+        </p>
+        <h1>H1 Heading tag (most used)</h1>
+        <h2>H2 Heading tag</h2>
+        <h3>H3 Heading tag</h3>
+        <h4>H4 Heading tag</h4>
+        <h5>H5 Heading tag</h5>
+        <h6>H6 Heading tag</h6>
+    </section>
+    <section>
+
+    </section>
+
+  </body>
 </html>
